--- a/TaskManagerWeb/Views/Task/Grid.cshtml
+++ b/TaskManagerWeb/Views/Task/Grid.cshtml
@@ -37,6 +37,7 @@
 <div class="app-toolbar">
     <button class="btn btn-white btn-sm" id="btn_Add"><span class="fa fa-plus"></span> 添加任务</button>
     <button class="btn btn-white btn-sm" id="btn_Import_Template"><span class="fa fa-plus"></span> 批量添加任务</button>
+    <button class="btn btn-white btn-sm" id="btn_refresh"><span class="fa fa-refresh"></span> 重新加载任务</button>
     <button class="btn btn-white btn-sm" id="btn_Export_Select"><span class="fa fa-file-excel-o"></span> 导出选中记录</button>
     <button class="btn btn-white btn-sm" id="btn_Export_All"><span class="fa fa-file-excel-o"></span> 导出所有记录</button>
 </div>
@@ -286,6 +287,42 @@
                     gridTask.Export("任务列表", datas);
                 } else {
                     layer.tips('请选择项', "#btn_Export_Select", {
+                        tips: 3
+                    });
+                }
+            });
+
+            //重新加载任务
+            $("#btn_refresh").on("click", function () {
+                //获取选中数据
+                var datas = gridTask.getSelectedRows();
+                if (datas.length > 0) {
+                    var arrId = [];
+                    for (var i = 0; i < datas.length; i++) {
+                        arrId.push(datas[i].TaskID);
+                    }
+                    $.ajax({
+                        type: "post",
+                        url: "/Task/Reload",
+                        contentType: "application/json",
+                        data: JSON.stringify(arrId),
+                        beforeSend: function () {
+                            //加载等待层
+                            index = layer.load(0);
+                        },
+                        complete: function () {
+                            layer.close(index);
+                        },
+                        success: function (data) {
+                            if (data.HasError) {
+                                layer.alert(data.Message);
+                            } else {
+                                layer.msg("任务重新加载完成");
+                            }
+                        }
+                    });
+                } else {
+                    layer.tips('请选择项', "#btn_refresh", {
                         tips: 3
                     });
                 }
